Fix: Change align about text

--- a/nextjs-blog/styles/utils.module.css
+++ b/nextjs-blog/styles/utils.module.css
@@ -50,3 +50,7 @@
 .lightText {
     color: #999;
 }
+
+.aboutText {
+    text-align: justify;
+}
